Ensure responsiveness on mobile

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -3,11 +3,19 @@
 .footer {
     width: 80%;
     height: 124px;
-    padding-right: 16px;
-    padding-left: 16px;
+
     display: flex;
     align-items: center;
     justify-content: center;
+
+    position: absolute;
+    bottom: -180px;
+    left: 0;
+    right: 0;
+
+    padding-right: 16px;
+    padding-left: 16px;
+
     margin-left: auto;
     margin-right: auto;
 
