--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,3 +5,5 @@ $dark-grey: #6a737d;
 $darker-grey: #586069;
 $light-grey: #e1e4e8;
 $light-grey-text: #fafbfc;
+
+$line-height: 1.3rem;
